--- a/Views/Admin/ManageCourts.cshtml
+++ b/Views/Admin/ManageCourts.cshtml
@@ -6,6 +6,7 @@
         <div class="input-group mb-3">
             <input type="text" name="Name" class="form-control" placeholder="Court Name" required>
             <input type="text" name="Location" class="form-control" placeholder="Location" required>
+            <input type="text" name="PricePerHour" class="form-control" placeholder="Price" required />
             <button class="btn btn-primary" type="submit">Add Court</button>
         </div>
     </form>
@@ -25,6 +26,7 @@
                     <td>@court.Id</td>
                     <td>@court.Name</td>
                     <td>@court.Location</td>
+                    <td>@court.PricePerHour</td>
                     <td>
                         <form method="post" asp-action="DeleteCourt">
                             <input type="hidden" name="courtId" value="@court.Id" />
